--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/anim.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato|IM+Fell+English+SC|Roboto+Mono|Source+Sans+Pro:600" rel="stylesheet">
+
 </head>
 
 <body>
@@ -84,9 +85,8 @@
 
     <div id="flexslider"></div>
 
+
     <h2 class="heading">Projects</h2>
-    <br>
-    <br>
 
     <div id="projects">
         <div class="flip-container" ontouchstart="this.classList.toggle('hover');" style="grid-area:e0">
@@ -223,7 +223,7 @@
     <!-- <script>
         var el = document.querySelectorAll('.anim-img');
         var i = 0;
-        
+
         el[0].style = "visibility:visible;opacity:1";
 
         setInterval(()=>{
