Changed sideNavbar style

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div id="sideNavBar">
         <!-- Button to close the side Navigation Bar-->
-        <label onclick="closeBar()">&times;</label>
+        <label onclick="closeBar()">&lsaquo;</label>
         <ul>
             <li>
                 <a href="#">Home</a>
@@ -236,7 +236,7 @@
                 document.getElementById("sideNavBar").style.width = "250px"; // set the width to 250px
             }
             else
-                document.getElementById("sideNavBar").style.width = "0"; // set the width to 0        
+                document.getElementById("sideNavBar").style.width = "0"; // set the width to 0
             navbar_showing = !navbar_showing; // change the toggle
         }
 
