--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 
     <div id="flexslider">
         <div class="flex">
-            <img src="/images/logo/logo_icon_1.png" style="grid-area:img">
+            <img src="/images/logo/logo_icon_1.png" class="theicon">
             <a href="">Scilab Toolboxes</a>
-            <div class="thecontent">FOSSEE has taken efforts to raise the level of Scilab toolboxes. Following are some of the toolboxes we are working on: Image processing toolbox, Signal processing toolbox, Communication toolbox, Optimization toolbox, Identification toolbox, Control systems toolbox, Scilab to C toolbox.</div>
+            <div class="thecontent"><p>FOSSEE has taken efforts to raise the level of Scilab toolboxes. Following are some of the toolboxes we are working on: Image processing toolbox, Signal processing toolbox, Communication toolbox, Optimization toolbox, Identification toolbox, Control systems toolbox, Scilab to C toolbox.</p></div>
         </div>
         <!-- <div class="flex">
             <img src="" style="grid-area:img">
