--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/anim.css">
     <link rel="stylesheet" href="css/theflex.css">
+    <link rel="stylesheet" href="css/news.css">
     <link href="https://fonts.googleapis.com/css?family=Lato|IM+Fell+English+SC|Roboto+Mono|Source+Sans+Pro:600" rel="stylesheet">
 </head>
 
 <body>
+
     <div id="header">
         <img src="images/logo.png" alt="" id="logo">
         <div id="mainMenu">
@@ -93,24 +95,103 @@
 
 
 
-    <div id="news"></div>
+    <div id="news">
+        <div class="tabs">
+            <ul>
+                <li><p>News</p></li>
+                <li><p>Policy</p></li>
+            </ul>
+        </div>
+        <div class="newscontent"></div>
+    </div>
 
     <div id="flexslider">
         <div class="flex">
-<<<<<<< HEAD
-            <img src="./images/logo/logo_icon_1.png" style="grid-area:img">
-=======
-            <img src="/images/logo/logo_icon_1.png" class="theicon">
->>>>>>> f286f61c3caaa99b1d76b49580627eec9928d528
+            <img src="./images/logo/logo_icon_1.png" class="theicon">
             <a href="">Scilab Toolboxes</a>
-            <div class="thecontent"><p>FOSSEE has taken efforts to raise the level of Scilab toolboxes. Following are some of the toolboxes we are working on: Image processing toolbox, Signal processing toolbox, Communication toolbox, Optimization toolbox, Identification toolbox, Control systems toolbox, Scilab to C toolbox.</p></div>
+            <div class="thebutton">
+                <div>
+                    <i class="arrow left"></i>
+                </div>
+                <div>
+                    <i class="arrow right"></i>
+                </div>
+            </div>
+            <div class="thecontent">
+                <p>FOSSEE has taken efforts to raise the level of Scilab toolboxes. Following are some of the toolboxes we are
+                    working on: Image processing toolbox, Signal processing toolbox, Communication toolbox, Optimization
+                    toolbox, Identification toolbox, Control systems toolbox, Scilab to C toolbox.</p>
+            </div>
         </div>
-        <!-- <div class="flex">
-            <img src="" style="grid-area:img">
-            <a href=""></a>
-            <div class="thecontent"></div>
-        </div> -->
+
+        <div class="flex">
+            <img src="./images/logo/logo_icon_2.png" alt="" class="theicon">
+            <a href="">Python Textbook Companions on Cloud</a>
+            <div class="thebutton">
+                <div>
+                    <i class="arrow left"></i>
+                </div>
+                <div>
+                    <i class="arrow right"></i>
+                </div>
+            </div>
+            <div class="thecontent">In order to allow anyone to easily view, modify, and run the Python textbook companions, the FOSSEE team has
+                made these available online. This is done by using IPython notebooks that are hosted on our server at https://tbc-python.fossee.in.
+                This environment allows viewers to use the examples with just a browser. </div>
+        </div>
+
+        <div class="flex">
+            <img src="./images/logo/logo_icon_2.png" alt="" class="theicon">
+            <a href="">Yaksh Online Test</a>
+            <div class="thebutton">
+                <div>
+                    <i class="arrow left"></i>
+                </div>
+                <div>
+                    <i class="arrow right"></i>
+                </div>
+            </div>
+            <div class="thecontent">FOSSEE team has developed an Open Source Python-Django based web application to conduct online programming as
+                well as MCQ based quizzes. It is an online solution to test the practical skills of students in various programming
+                platforms like Python, C, C++, Java, Scilab & Bash.</div>
+        </div>
+        <div class="flex">
+            <img src="./images/logo/logo_icon_4.png" alt="" class="theicon">
+            <a href="">Mixed Mode Simulation in eSim</a>
+            <div class="thebutton">
+                <div>
+                    <i class="arrow left"></i>
+                </div>
+                <div>
+                    <i class="arrow right"></i>
+                </div>
+            </div>
+            <div class="thecontent">NGHDL is a mixed mode circuit simulator developed by FOSSEE, using NgSpice and GHDL. In NGHDL, NgSpice is used
+                to simulate the analog components and GHDL is used to simulate the digital components, where the analog and
+                digital components are communicating through socket.
+            </div>
+        </div>
+
     </div>
+
+    <script>
+        var slideIndex = 0;
+        carousel();
+
+        function carousel() {
+            var i;
+            var x = document.getElementsByClassName("flex");
+            // console.log(x);            
+            for (i = 0; i < x.length; i++) {
+                x[i].style.display = "none";
+            }
+            slideIndex++;
+            if (slideIndex > x.length) { slideIndex = 1 }
+            x[slideIndex - 1].style.display = "grid";
+            setTimeout(carousel, 2000); // Change image every 2 seconds
+        }
+    </script>
+
 
     <h2 class="heading">Projects</h2>
 
@@ -121,8 +202,8 @@
                     <img src="images/icons/scilab.png" alt="">
                 </div>
                 <div class="back">
-                    <p>Scilab is a free and open source software for numerical computation developed by Scilab Enterprises, France. Scilab also
-                    includes Xcos which is an open source alternative to Simulink.</p>
+                    <p>Scilab is a free and open source software for numerical computation developed by Scilab Enterprises,
+                        France. Scilab also includes Xcos which is an open source alternative to Simulink.</p>
                 </div>
             </div>
         </div>
@@ -233,9 +314,9 @@
 
     <div id="activites">
         <h2 class="heading">Activites</h2>
-        <p>The FOSSEE Project promotes the use of the following FOSS tools to improve the quality of education and research: We promote
-        these tools by encouraging students and faculty to use them in education and research through the activities listed
-        in this page.</p>
+        <p>The FOSSEE Project promotes the use of the following FOSS tools to improve the quality of education and research:
+            We promote these tools by encouraging students and faculty to use them in education and research through the
+            activities listed in this page.</p>
 
     </div>
 
