--- a/index.html
+++ b/index.html
@@ -97,11 +97,7 @@
 
     <div id="flexslider">
         <div class="flex">
-<<<<<<< HEAD
-            <img src="./images/logo/logo_icon_1.png" style="grid-area:img">
-=======
-            <img src="/images/logo/logo_icon_1.png" class="theicon">
->>>>>>> f286f61c3caaa99b1d76b49580627eec9928d528
+            <img class="theicon" src="./images/logo/logo_icon_1.png">
             <a href="">Scilab Toolboxes</a>
             <div class="thecontent"><p>FOSSEE has taken efforts to raise the level of Scilab toolboxes. Following are some of the toolboxes we are working on: Image processing toolbox, Signal processing toolbox, Communication toolbox, Optimization toolbox, Identification toolbox, Control systems toolbox, Scilab to C toolbox.</p></div>
         </div>
