--- a/index.html
+++ b/index.html
@@ -88,11 +88,9 @@
             </li>
         </ul>
     </div>
-
-    <h1 class="ribbon">
-        <strong class="ribbon-content">Everybody Hates ribbons</strong>
-    </h1>
-
+    <div id="sidediv">
+        <p></p>
+    </div>
 
     <div id="special-area">
         <div id="news">
@@ -214,8 +212,22 @@
     <script>
         var slideIndex = 0;
         var flex_stop_anim = false;
-        // carousel();
         setInterval(carousel, 7000);
+        var text_index = 0;
+        setInterval(function () {
+            var el =  document.querySelector('#sidediv p');
+            // el.style = "animation-name:none;";
+            var ar = [
+                "To increase the use of open source software in the curriculum and research",
+                "To promote open source software and hardware",
+                "To create documentation",
+                "To Develop new open source software where required"
+            ];
+           el.innerText = ar[text_index]+'.';
+        //    el.style="animation:slideText 3s ease;";
+            text_index++;
+            if(text_index > 3) text_index = 0;
+        }, 5000);
         function carousel() {
             if (!flex_stop_anim) {
                 var i;
@@ -630,11 +642,21 @@
             </p>
         </div>
         <div id="icons">
-            <div><i class="fa fa-signal"></i></div>
-            <div><i class="fa fa-facebook"></i></div>
-            <div><i class="fa fa-twitter"></i></div>
-            <div><i class="fa fa-youtube"></i></div>
-            <div><i class="fa fa-github"></i></div>
+            <div>
+                <i class="fa fa-signal"></i>
+            </div>
+            <div>
+                <i class="fa fa-facebook"></i>
+            </div>
+            <div>
+                <i class="fa fa-twitter"></i>
+            </div>
+            <div>
+                <i class="fa fa-youtube"></i>
+            </div>
+            <div>
+                <i class="fa fa-github"></i>
+            </div>
         </div>
     </div>
 
